--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "reflex-ai",
+  "name": "reflexai-server",
   "version": "1.0.0",
-  "description": "ReflexAI - персональный помощник",
+  "description": "ReflexAI server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "ai",
-    "chat",
-    "assistant"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^9.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
-    "web-push": "^3.6.7"
+    "node-fetch": "^3.2.10",
+    "dotenv": "^16.0.3"
   }
 }
