--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "reflexai-server",
+  "name": "reflex-ai",
   "version": "1.0.0",
-  "description": "ReflexAI server",
+  "description": "ReflexAI - персональный помощник",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
+  "keywords": [
+    "ai",
+    "chat",
+    "assistant"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "jsonwebtoken": "^9.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.2.10",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
+    "web-push": "^3.6.7"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
